--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/material": "^7.1.0",
     "@mui/material-nextjs": "^7.1.0",
     "@mui/x-date-pickers": "^8.3.1",
+    "@tanstack/react-query": "^5.76.1",
+    "axios": "^1.9.0",
     "dayjs": "^1.11.13",
     "init": "^0.1.2",
     "next": "15.3.2",
@@ -40,6 +42,12 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "msw": "^2.8.4",
     "typescript": "^5"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
