--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material-nextjs": "^7.1.0",
     "@mui/x-date-pickers": "^8.3.1",
     "@tanstack/react-query": "^5.76.1",
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
     "init": "^0.1.2",
