--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,12 @@
       "@shared/*": ["./shared/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/api/upload-image/.api.ts"
+  ],
   "exclude": ["node_modules"]
 }
