--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^5.0.1",
@@ -18,10 +19,12 @@
     "@mui/material": "^7.1.0",
     "@mui/material-nextjs": "^7.1.0",
     "@mui/x-date-pickers": "^8.3.1",
+    "@sentry/nextjs": "^9.28.0",
     "@tanstack/react-query": "^5.76.1",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
+    "import-in-the-middle": "^1.14.0",
     "init": "^0.1.2",
     "js-cookie": "^3.0.5",
     "next": "15.3.2",
@@ -29,6 +32,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
+    "require-in-the-middle": "^7.5.2",
     "storybook": "^8.6.13",
     "zod": "^3.25.32",
     "zustand": "^5.0.4"
