feat : 토큰 디코드 , nestjs sent 연결 라이브러리 추가

--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "@mui/x-date-pickers": "^8.3.1",
     "@sentry/nextjs": "^9.28.0",
     "@tanstack/react-query": "^5.76.1",
+    "@types/event-source-polyfill": "^1.0.5",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
+    "event-source-polyfill": "^1.0.31",
     "import-in-the-middle": "^1.14.0",
     "init": "^0.1.2",
+    "jose": "^6.0.11",
     "js-cookie": "^3.0.5",
     "next": "15.3.2",
     "npx": "^10.2.2",
