--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "require-in-the-middle": "^7.5.2",
+    "simplebar-react": "^3.3.1",
     "storybook": "^8.6.13",
     "zod": "^3.25.32",
     "zustand": "^5.0.4"
