--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
     "event-source-polyfill": "^1.0.31",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "import-in-the-middle": "^1.14.0",
     "init": "^0.1.2",
     "jose": "^6.0.11",
@@ -35,6 +38,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
+    "react-i18next": "^15.5.3",
     "require-in-the-middle": "^7.5.2",
     "storybook": "^8.6.13",
     "zod": "^3.25.32",
@@ -53,6 +57,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "i18next-parser": "^9.3.0",
     "typescript": "^5"
   }
 }
